--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths":{
-      "@interfaces/*": ["./src/app/interfaces/*"],
-      "@services/*": ["./src/app/services/*"],
+      "@interfaces/index.ts": ["./src/app/interfaces/index.ts"],
+      "@services/index.ts": ["./src/app/services/index.ts"],
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
